# diskurs

./: .gitignore  .gitmodules  .readthedocs.yaml  404.html  LICENSE  README.md  blog.html  build_docs.sh  docs.html  index.html  markdown-page.html  pyproject.toml  sitemap.xml
.githooks/: pre-push
.github/workflows/: deploy-docs.yml  deploy.yaml
assets/css/: styles.7a6aa77d.css
assets/js/: 01a85c17.96be6fb2.js  0e384e19.bf13f8b8.js  14eb3368.94f2edf1.js  1538.44747d31.js  17896441.790d4057.js  18c41134.0e41ac82.js  1a9ef371.4b31777c.js  1df93b7f.aa35f2ee.js  1e0b9b57.68f3525b.js  1e4232ab.f187eade.js  1f391b9e.be469a12.js  2237.1d098c73.js  23740d5f.183b3a1c.js  2a0ab440.33601ecb.js  2b8e8d84.06b81971.js  3347.c9de76d7.js  33fc5bb8.2fa38763.js  34720196.9d9f3b85.js  36994c47.e0fc7644.js  393be207.22ed97ad.js  3e52d858.c6eb38c4.js  533a09ca.7f07577c.js  583300ff.f808c45c.js  59362658.8e2a2c13.js  5c868d36.5067c00c.js  5e95c892.7b5f7986.js  621db11d.b431d369.js  6875c492.4224d18b.js  6d7b8adb.6050c147.js  6e0204b6.21c8209e.js  6fb24327.d514eeb8.js  708ab194.58fe454f.js  73664a40.170fdd9b.js  7661071f.1a227753.js  7a2c36e3.8805a485.js  814f3328.b98fe315.js  815cdf26.e7b1eda2.js  822bd8ab.28161ae0.js  86876cf2.3e25bb1c.js  8717b14a.e5453894.js  (+23 more)
blog/: archive.html  atom.xml  authors.html  first-blog-post.html  long-blog-post.html  mdx-blog-post.html  rss.xml  tags.html  welcome.html
blog/authors/: all-sebastien-lorber-articles.html  yangshun.html
blog/tags/: docusaurus.html  facebook.html  hello.html  hola.html
diskurs/: __init__.py  agent.py  azure_llm_client.py  cli.py  conductor_agent.py  config.py  conversation_store.py  dispatcher.py  entities.py  errors.py  filesystem_conversation_store.py  forum.py  heuristic_agent.py  immutable_conversation.py  immutableconversation.py  interfaces.py  llm_client.py  logger_setup.py  multistep_agent.py  prompt.py  protocols.py  registry.py  tools.py  utils.py
diskurs/assets/: can_finalize_system_template.jinja2  can_finalize_user_template.jinja2  conductor_user_template.jinja2  json_formatting.jinja2  llm_compiler_debug_system_template.jinja2  llm_compiler_error_system_template.jinja2  llm_compiler_planning_system_template.jinja2  llm_compiler_planning_user_template.jinja2  llm_compiler_summary_system_template.jinja2  llm_compiler_summary_user_template.jinja2
diskurs/llm_compiler/: agent.py  dependency_analyzer.py  entities.py  llm_compiler_agent.py  parallel_executor.py  prompts.py
doc/: agent.rst  api.rst  conf.py  dispatcher.rst  entities.rst  filesystem_conversation_store.rst  heuristic_agent.rst  immutable_conversation.rst  index.rst  markdown_to_mdx.py  prompt.rst  protocols.rst  requirements.txt  sphinx_utils.py
doc/docs/: concepts.md  getting_started.md
docs/: conductor_agent.html  dispatcher.html  filesystem_conversation_store.html  getting_started.md  heuristic_agent.html  immutable_conversation.html  intro.html  llm_client.html  multistep_agent.html  prompt.html  protocols.html
docs-site/: docusaurus.config.js  docusaurus.config.ts  package-lock.json  package.json
docs-site/docs/: Concepts.md  GettingStarted.md  conductor_agent.md  dispatcher.md  filesystem_conversation_store.md  immutable_conversation.md  index.md  multistep_agent.md  prompt.md
docs-site/docs/api/: heuristic_agent.md  index.md  (+3 more)
docs/category/: tutorial---basics.html  tutorial---extras.html
docs/source/: conductor_agent.rst  conf.py  dispatcher.rst  index.rst  llm_client.rst  multistep_agent.rst  protocols.rst
docs/tutorial-basics/: congratulations.html  create-a-blog-post.html  create-a-document.html  create-a-page.html  deploy-your-site.html  markdown-features.html
docs/tutorial-extras/: manage-docs-versions.html  translate-your-site.html
examples/forum_setup/: config.yml  diskurs.yml  main.py  user_config.py
examples/llm_compiler/: business_report_config.yaml  llm_compiler_config.yaml  run_llm_compiler.py
examples/parallel_agent/: parallel_config.yaml  run_parallel.py
examples/prompt_arguments/: prompt_argument_example.py
source/: conf.py  index.rst
src/diskurs/: agent.py  agent_example.py  agents.py  cli.py  conductor_agent.py  config.py  diskurs.yml  dispatcher.py  entities.py  forum.py  interfaces.py  llm_client.py  main.py  messaging.py  multistep_agent.py  prompt.py  prompt_example.py  registry.py  tools.py  utils.py
tests/: conftest.py  test_agent.py  test_azure_llm_client.py  test_conductor_agent.py  test_entities.py  test_execute_plan.py  test_filesystem_conversation_store.py  test_forum.py  test_heuristic_agent.py  test_immutable_conversation.py  test_llm_client.py  test_llm_compiler_prompts.py  test_multistep_agent.py  test_per_turn_fields.py  test_prompt.py  test_tools.py
tests/prompt_test_files/: prompt.py
tests/test_files/: config.yaml  test_entities.py
website/: go.mod  hugo.yaml  package-lock.json  package.json
website/content/: overview.md
website/public/: index.html  index.xml  sitemap.xml
(+34 files in other folders)
