[tool.poetry]
name = "diskurs"
version = "0.0.30"
description = "A hackable and extendable framework for developing LLM-based multi-agentic systems."
authors = ["Flurin Gishamer <fgishamer@me.com>"]
license = "MIT"
readme = "README.md"

classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

packages = [
    { include = "diskurs" },
]

include = [
    { path = "src/diskurs/**/*.jinja2", format = "sdist" },
    { path = "src/diskurs/**/*.txt", format = "sdist" },
]

exclude = [
    "tests",
    "tests/**",
    "**/__pycache__",
    "**/*.py[cod]",
]


[tool.poetry.dependencies]
python = "^3.12"
pyaml = "^24.7.0"
Jinja2 = "^3.1.4"
openai = "^1.43.0"
python-dotenv = "^1.0.1"
click = "^8.1.7"
tiktoken = "^0.8.0"

azure-identity = { version = "^1.18.0", optional = true }

[tool.poetry.extras]
azure = ["azure-identity"]

[tool.poetry.group.dev.dependencies]
black = "^24.10.0"
pytest = "^8.3.2"
pytest-cov = "5.0.0"
sphinx = "^8.1.3"
sphinx-autodoc-typehints = "^2.5.0"
furo = "^2024.8.6"

sphinx-markdown-builder = "^0.6.7"
myst-parser = "^4.0.0"
pdoc = "^15.0.0"
[tool.poetry.scripts]
diskurs = "diskurs.cli:cli"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.urls]
Homepage = "https://github.com/agentic-diskurs/diskurs"
Issues = "https://github.com/agentic-diskurs/diskurs/issues"