[tool.poetry]
name = "diskurs"
version = "0.0.69"
description = "A hackable and extendable framework for developing LLM-based multi-agentic systems."
authors = ["Flurin Gishamer <fgishamer@me.com>"]
license = "MIT"
readme = "README.md"

classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

packages = [
    { include = "diskurs" },
]

include = [
    { path = "src/diskurs/**/*.jinja2", format = "sdist" },
    { path = "src/diskurs/**/*.txt", format = "sdist" },
]

exclude = [
    "tests",
    "tests/**",
    "**/__pycache__",
    "**/*.py[cod]",
    "doc",
    "doc/**",
]


[tool.poetry.dependencies]
python = "^3.12"
pyaml = "^24.7.0"
Jinja2 = "^3.1.4"
openai = "^1.57.2"
python-dotenv = "^1.0.1"
click = "^8.1.7"
tiktoken = "^0.8.0"
asyncer = "^0.0.8"
aiofiles = "^24.1.0"

azure-identity = {version = "^1.19.0", extras = ["azure"]}

inquirer = "^3.4.0"
networkx = "^3.4.2"
[tool.poetry.extras]
azure = ["azure-identity"]

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
pytest = "^8.3.4"
pytest-cov = "5.0.0"
sphinx = "^8.1.3"
sphinx-autodoc-typehints = "^2.5.0"
sphinx-markdown-builder = "^0.6.7"
myst-parser = "^4.0.0"
sphinx-rtd-theme = "^3.0.2"
pygments = "^2.18.0"
pytest-asyncio = "^0.25.3"
isort = "^6.0.1"
pylint = "^3.3.6"

[tool.poetry.scripts]
diskurs = "diskurs.cli:cli"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.urls]
Homepage = "https://github.com/agentic-diskurs/diskurs"
Issues = "https://github.com/agentic-diskurs/diskurs/issues"
Documentation = "https://diskurs.readthedocs.io"

[tool.pytest.ini_options]
asyncio_mode = "strict"
asyncio_default_fixture_loop_scope = "function"
